Начал втягивать калькулятор продуктов

--- a/sc-decisions-digraph/index.html
+++ b/sc-decisions-digraph/index.html
@@ -38,5 +38,9 @@
             </div>
         </div>
         <script src="lib/index.js" defer></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.2/lodash.min.js" defer></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.min.js" defer></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" defer></script>
+        <script src="lib/app.js" defer></script>
     </body>
 </html>
