--- a/sc-decisions-digraph/index.html
+++ b/sc-decisions-digraph/index.html
@@ -17,7 +17,7 @@
                             <li data-bind="visible:Visible">
                                 <span data-bind="text:Caption"> </span>
                                 <!-- ko if:Type === 'Integer' -->
-                                <input data-bind="textInput:Value" />
+                                <input type="text" data-bind="textInput:Value" size="6"/>
                                 <!-- /ko -->
                                 <!-- ko if:Type === 'Boolean' -->
                                 <input type="checkbox" data-bind="checked:Value" />
