--- a/sc-decisions-digraph/index.html
+++ b/sc-decisions-digraph/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title></title>
-        <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-debug.js"></script>-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-debug.js"></script>
     </head>
     <body>
         <div id="viewmodel">
